# check-graph

./: .dockerignore  .gitignore  Dockerfile  Main.hs  Makefile  README.md  README.org  Vagrantfile  check-graph.cabal  make-ubuntu64.sh
etc/docker/bld/: Dockerfile
etc/docker/dev/: Dockerfile
etc/docker/lib/: Dockerfile
etc/docker/run/: Dockerfile
src/: Main.hs
