name:                   check-graph
version:                0.2.0
synopsis:               CLI for checking graphite (can be used with Nagios)
homepage:               http://github.com/knewton/check-graph
license:                OtherLicense
license-file:           LICENSE
author:                 Tim Dysinger <tim@knewton.com>
maintainer:             Tim Dysinger <tim@knewton.com>
category:               System
build-type:             Simple
cabal-version:          >=1.14

executable              check_graph
  default-language:     Haskell2010
  ghc-options:          -Wall
  main-is:              Main.hs
  build-depends:        base >=4.5
                      , acme-lookofdisapproval
                      , aeson
                      , bytestring
                      , http-conduit
                      , optparse-applicative
                      , transformers
                      , utf8-string
