name:                   check-graph
version:                0.4.3
synopsis:               CLI for checking graphite (can be used with Nagios)
homepage:               http://github.com/knewton/check-graph
license:                OtherLicense
license-file:           LICENSE
author:                 Tim Dysinger <tim@knewton.com>
maintainer:             Tim Dysinger <tim@knewton.com>
category:               System
build-type:             Simple
cabal-version:          >=1.14

executable              check-graph
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  main-is:              Main.hs
  build-depends:        base >=4.5
                      , aeson
                      , bytestring
                      , http-client
                      , lifted-base
                      , optparse-applicative == 0.10.0
                      , old-locale
                      , time
                      , transformers
                      , utf8-string
